<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UserEventsDetailActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnDeleteEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEditEvent"
        app:layout_constraintStart_toStartOf="@+id/etUserEventDescription" />

    <Button
        android:id="@+id/btnEditEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="@+id/etUserEventDescription"
        app:layout_constraintTop_toBottomOf="@+id/etUserEventDescription" />

    <TextView
        android:id="@+id/tvUserEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date_time"
        app:layout_constraintBottom_toTopOf="@+id/etUserEventDate"
        app:layout_constraintStart_toStartOf="@+id/etUserEventDate" />

    <TextView
        android:id="@+id/tvUserEventAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_address_header"
        app:layout_constraintBottom_toTopOf="@+id/etUserEventAddress"
        app:layout_constraintStart_toStartOf="@+id/etUserEventAddress" />

    <TextView
        android:id="@+id/tvUserEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_description_header"
        app:layout_constraintBottom_toTopOf="@+id/etUserEventDescription"
        app:layout_constraintStart_toStartOf="@+id/etUserEventDescription" />

    <TextView
        android:id="@+id/tvUserEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/event_title_header"
        app:layout_constraintBottom_toTopOf="@+id/etUserEventTitle"
        app:layout_constraintStart_toStartOf="@+id/etUserEventTitle" />

    <EditText
        android:id="@+id/etUserEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/mandatory_field"
        android:inputType="textPersonName"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserEventAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/mandatory_field"
        android:inputType="textPersonName"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintStart_toStartOf="@+id/etUserEventTitle"
        app:layout_constraintTop_toBottomOf="@+id/etUserEventTitle" />

    <EditText
        android:id="@+id/etUserEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/mandatory_field"
        android:inputType="date"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintStart_toStartOf="@+id/etUserEventAddress"
        app:layout_constraintTop_toBottomOf="@+id/etUserEventAddress" />

    <EditText
        android:id="@+id/etUserEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/optional_field"
        android:inputType="textMultiLine"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintStart_toStartOf="@+id/etUserEventDate"
        app:layout_constraintTop_toBottomOf="@+id/etUserEventDate" />
</android.support.constraint.ConstraintLayout>