<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/etProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/username_field"
        android:inputType="textPersonName"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_header"
        app:layout_constraintBottom_toTopOf="@+id/etProfileUsername"
        app:layout_constraintStart_toStartOf="@+id/etProfileUsername" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_header"
        app:layout_constraintBottom_toTopOf="@+id/etProfileEmail"
        app:layout_constraintStart_toStartOf="@+id/etProfileEmail" />

    <EditText
        android:id="@+id/etProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="@+id/etProfileUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etProfileUsername"
        app:layout_constraintTop_toBottomOf="@+id/etProfileUsername" />

    <Button
        android:id="@+id/btnProfileUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_rofile_btn"
        app:layout_constraintEnd_toEndOf="@+id/etProfileEmail"
        app:layout_constraintStart_toStartOf="@+id/etProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/etProfileEmail" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_password_button"
        app:layout_constraintEnd_toEndOf="@+id/btnProfileUpdate"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/btnProfileUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnProfileUpdate" />

</android.support.constraint.ConstraintLayout>